--- a/application.properties
+++ b/application.properties
@@ -2,4 +2,5 @@ rsa.publicKey=classpath:keys/publicKey.pem
 spring.jpa.properties.hibernate.format_sql=true
 spring.cloud.discovery.enabled=true
 eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
-eureka.instance.prefer-ip-address=strue
+eureka.instance.prefer-ip-address=true
+management.endpoints.web.exposure.include=*
