--- a/User-Service.properties
+++ b/User-Service.properties
@@ -1,8 +1,8 @@
 
 rsa.privateKey=classpath:keys/privateKey.pem
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://restaurant-mysql-service:3306/user_service?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
