--- a/User-Service.properties
+++ b/User-Service.properties
@@ -1,6 +1,6 @@
 
 rsa.privateKey=classpath:keys/privateKey.pem
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://restaurant-mysql-service:3306/user_service?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
