--- a/Cart-Service.properties
+++ b/Cart-Service.properties
@@ -1,7 +1,6 @@
-# PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/cart_db
+spring.datasource.url=jdbc:postgresql://restaurant-postgres-service:5432/cart_db
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
