remove service from url

--- a/Cart-Service.properties
+++ b/Cart-Service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://restaurant-postgres-service:5432/cart_db
+spring.datasource.url=jdbc:postgresql://localhost:5434/cart_db
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
