--- a/payment-service.properties
+++ b/payment-service.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/payment_db
-spring.datasource.username=payment_user
-spring.datasource.password=payment_pass
+spring.datasource.url=jdbc:postgresql://localhost:543d/payment_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
