--- a/payment-service.properties
+++ b/payment-service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:543d/payment_db
+spring.datasource.url=jdbc:postgresql://localhost:5434/payment_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
